[fix] LAQ-188 - Assignment lines missing color

--- a/src/main/resources/public/assets/js/pulse/_pulse.scss
+++ b/src/main/resources/public/assets/js/pulse/_pulse.scss
@@ -293,6 +293,9 @@ body.application {
   &.report {
     stroke: orange;
   }
+  &.assignment {
+    stroke: teal;
+  }
   &:hover {
     stroke-width: 6;
   }
